--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <a href="/admin/product"> product admin </a>
+    <a href="/admin/main">Admin Main</a>
 </body>
 </html>
